<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edtClientNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameClientInputField"
            android:inputType="text|textCapWords"
            android:minHeight="48dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/toppings_title"
            android:textAllCaps="true"
            android:textColor="@color/title"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cbWhippedTopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/whipped_cream_topping"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:text="@string/whipped_cream_topping"
            android:textColor="@color/topping_input"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cbChocolateTopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/whipped_cream_topping"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:text="@string/chocolate_topping"
            android:textColor="@color/topping_input"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/quantity_title"
            android:textAllCaps="true"
            android:textColor="@color/title"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tvDecreaseQuantity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/secondary_variant"
                android:fontFamily="sans-serif-black"
                android:text="@string/minus_button" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="24sp"
                tools:text="0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tvIncreaseQuantity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/secondary_variant"
                android:fontFamily="sans-serif-black"
                android:text="@string/plus_button" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/price_title"
            android:textAllCaps="true"
            android:textColor="@color/title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="24sp"
            tools:text="0 €" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/secondary"
            android:text="@string/order_button"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/llyContainerOrderSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/order_summary_title"
                android:textColor="@color/title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvClientNameOrderSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                tools:text="Nombre cliente: Eduardo Basalo Peña" />

            <TextView
                android:id="@+id/tvToppingsOrderSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                tools:text="Toppings: Whipped cream, chocolate" />

            <TextView
                android:id="@+id/tvQuantityOrderSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                tools:text="Quantity: 2" />

            <TextView
                android:id="@+id/tvPriceOrderSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                tools:text="Total: 10€" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>